--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4"
   }
 }
