--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -50,6 +50,9 @@ default: &default
 development:
   <<: *default
   compile: true
+  dev_server:
+    port: 3036
+
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
