--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@rails/webpacker": "5.4.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
+    "postcss-loader": "^8.1.1",
     "tailwindcss": "^3.4.4",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3",
     "webpack-manifest-plugin": "^5.0.0"
